Ninja: Avoid preprocessing twice with explicit Fortran_PREPROCESS

Fix spurious warnings from gfortran+Ninja for preprocessing.

Fixes: #23248